package object_oriented_design_and_analysis.well_designed_apps_rock.part2;

public class Mandolin extends Instrument {
    public Mandolin(String serialNumber, double price, InstrumentSpec spec) {
        super(serialNumber, price, spec);
    }
}
